--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script: ./renpy.sh "../sample_mod/" lint && ./renpy.sh launcher distribute "../s
 deploy:
   provider: releases
   api_key:
-    secure: GITHUB_API_KEY
+    secure: $GITHUB_API_KEY
   file: 
      - *.zsync
      - *.tar.bz2
