--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
 
 install:
     - cd ..
-
+    - git submodule update --init
     - wget https://www.renpy.org/dl/6.99.12.4/renpy-6.99.12.4-sdk.tar.bz2
     - tar xf renpy-6.99.12.4-sdk.tar.bz2
     - rm renpy-6.99.12.4-sdk.tar.bz2
