--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ addons:
 
 install:
     - cd ..
-    - git submodule update --init
     - wget https://www.renpy.org/dl/6.99.12.4/renpy-6.99.12.4-sdk.tar.bz2
     - tar xf renpy-6.99.12.4-sdk.tar.bz2
     - rm renpy-6.99.12.4-sdk.tar.bz2
@@ -23,7 +22,7 @@ install:
     # we're copying over the template files into the renpy SDK
     # and CD into the renpy 
     
-    - cp -Rf MonikaModDev/DDLCModTemplate/* sample_mod/
+    - cp -Rf DDLCModTemplate/* sample_mod/
 
     - cd renpy
 
