--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,8 @@ install:
 
     # now this is where it gets interesting
     # we're copying over the template files into the renpy SDK
-    # and CD into the renpy 
-    - ls
-    - cp -Rf DDLCModTemplate/* travis_mod/
+    # and CD into the renpy
+    - cp -vRf quickstart-travis/DDLCModTemplate/* travis_mod/
 
     - cd renpy
 
