--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ python:
     
 # Travis build script for RenPy
 # based on Monika-After-Story script.
-
-addons:
-  artifacts: true
   
 # This is the install stage
 # All your dependencies go here. We have done the RenPy SDK part done for you.
@@ -52,4 +49,4 @@ deploy:
      - "*.zip"
   skip_cleanup: true
   on:
-    tags: true # your mods only builds on a GitHub Git tag so make sure you tag and release accordingly!
+    tags: true # your mods only builds and uploads releases on a GitHub Git tag so make sure you tag and release accordingly!
