--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ env:
 # This is the script part. This is where the actual building is happening.
 # This produces an artifact which we'll use later on to publish a release.
 
-script: ./renpy.sh "../travis_mod/" lint && ./renpy.sh launcher distribute "../travis_mod/" && ls
+script: ./renpy.sh "../sample_mod/" lint && ./renpy.sh launcher distribute "../sample_mod/" && ls "$TRAVIS_HOME/build"
 
 
 # This is where the actual releases happen. Travis has the ability to publish releases from GitHub, Amazon S3, OpenShift, etc.
