--- a/.travis.yml
+++ b/.travis.yml
@@ -14,16 +14,17 @@ install:
     - tar xf renpy-6.99.12.4-sdk.tar.bz2
     - rm renpy-6.99.12.4-sdk.tar.bz2
     - mv renpy-6.99.12.4-sdk renpy
+    - wget https://s3-us-west-2.amazonaws.com/monika-after-story/ddlc/mas.zip # atm we'll use MAS's DDLC base
 
     # now this is where it gets interesting
     # we're copying over the template files into the renpy SDK
     # and CD into the renpy
     
-    - mkdir travis_mod
+    - mkdir mod
+    - unzip mas.zip -d mod
     
-    - cp -vRf quickstart-travis/sample_mod ./
+    - cp -vRf quickstart-travis/sample_mod/* mod/*
 
-    - cd renpy
 
 env:
     # this is required as there was build issues without this, don't remove this.
@@ -32,7 +33,7 @@ env:
 # This is the script part. This is where the actual building is happening.
 # This produces an artifact which we'll use later on to publish a release.
 
-script: ./renpy.sh "../sample_mod/" lint && ./renpy.sh launcher distribute "../sample_mod/" && ls "$TRAVIS_HOME/build"
+script: renpy/renpy.sh "mod/" lint && renpy/renpy.sh launcher distribute "mod/" && ls "$TRAVIS_HOME/build"
 
 
 # This is where the actual releases happen. Travis has the ability to publish releases from GitHub, Amazon S3, OpenShift, etc.
