--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
     
     # Remove README.html to prevent errors.
     - rm -rf travis-quickstart/sample_mod/README.html && cp -vRf quickstart-travis/sample_mod/* mod/
+    - rm -rf mod/chess.rpyc
 
 
 env:
