--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ install:
     # we're copying over the template files into the renpy SDK
     # and CD into the renpy
     
-    - ./quickstart-travis/setup.sh
+    - bash ./quickstart-travis/setup.sh
     
     # Remove README.html to prevent errors.
     - rm -rf travis-quickstart/sample_mod/README.html && cp -vRf quickstart-travis/sample_mod/* mod/
