--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: python
 python:
     - "2.7"
-    
+
+sudo: required
+
 # Travis build script for RenPy
 # based on Monika-After-Story script.
   
