--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ install:
     
     # Remove README.html to prevent errors.
     - rm -rf travis-quickstart/sample_mod/README.html && cp -vRf quickstart-travis/sample_mod/* mod/
+    
+    -mkdir launcher
 
 
 env:
