--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,7 @@ deploy:
   api_key:
     secure: $GITHUB_API_KEY
   file: 
-     - "********-*.*.*-dists/********-*.*.*.tar.bz2"
-     - "********-*.*.*-dists/********-*.*.*.zip"
+     - "********-*.*.*-dists/*"
   skip_cleanup: true
   on:
     tags: true # your mods only builds and uploads releases on a GitHub Git tag so make sure you tag and release accordingly!
