--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ env:
 # This is the script part. This is where the actual building is happening.
 # This produces an artifact which we'll use later on to publish a release.
 
-script: ./renpy.sh "../mod/" lint && ./renpy.sh launcher distribute "../mod/" --savedir launcher && ls ..
+script: ./renpy.sh "../mod/" lint && ./renpy.sh launcher distribute "../mod/" --savedir launcher && cd ..
 
 
 # This is where the actual releases happen. Travis has the ability to publish releases from GitHub, Amazon S3, OpenShift, etc.
@@ -48,7 +48,7 @@ deploy:
   api_key:
     secure: $GITHUB_API_KEY
   file: 
-     - "../********-*.*.*-dists/*"
+     - "********-*.*.*-dists/*"
   skip_cleanup: true
   on:
     tags: true # your mods only builds and uploads releases on a GitHub Git tag so make sure you tag and release accordingly!
