--- a/.travis.yml
+++ b/.travis.yml
@@ -47,8 +47,8 @@ deploy:
   provider: releases
   api_key:
     secure: $GITHUB_API_KEY
-  file: 
-     - "********-*.*.*-dists/*"
+  file_glob: true
+  file: ********-*.*.*-dists/**
   skip_cleanup: true
   on:
     tags: true # your mods only builds and uploads releases on a GitHub Git tag so make sure you tag and release accordingly!
