--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ install:
     # we're copying over the template files into the renpy SDK
     # and CD into the renpy
     
-    - bash ./quickstart-travis/setup.sh
+    - bash ./quickstart-oss/setup.sh
     
     # Remove README.html to prevent errors.
-    - rm -rf travis-quickstart/sample_mod/README.html && cp -vRf quickstart-travis/sample_mod/* mod/
+    - rm -rf travis-quickstart/sample_mod/README.html && cp -vRf quickstart-oss/sample_mod/* mod/
     
     - cd renpy
 
