--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ install:
     
     - echo $TRAVIS_COMMIT
     
-    - sed -i "s/define config.version = \"0.1.2beta2\"/define config.version = \"$TRAVIS_COMMIT\"/g" mod/game/options.rpy
+    - sed -i "s/define config.version = \"0.1.2\"/define config.version = \"$TRAVIS_COMMIT\"/g" mod/game/options.rpy
     
     - cd renpy
 
