--- a/.travis.yml
+++ b/.travis.yml
@@ -21,14 +21,14 @@ install:
     # we're copying over the template files into the renpy SDK
     # and CD into the renpy
     
-    - bash ./quickstart-oss/setup.sh
+    - bash ./quickstart-oss/travis/setup.sh
     
     # Remove README.html to prevent errors.
     - rm -rf travis-quickstart/sample_mod/README.html && cp -vRf quickstart-oss/sample_mod/* mod/
     
     - echo $TRAVIS_COMMIT
     
-    - bash quickstart-oss/inject_version.sh
+    - bash quickstart-oss/travis/inject_version.sh
     
     
     - cd renpy
